fix user patch
