# docs/swagger.yaml
@@ -293,6 +293,29 @@ definitions:
       lastname:
         type: string
     type: object
+  user.UserPatchOperation:
+    properties:
+      op:
+        type: string
+      path:
+        type: string
+      values:
+        items:
+          $ref: '#/definitions/user.Value'
+        type: array
+    type: object
+  user.UserPatchRequest:
+    properties:
+      operations:
+        items:
+          $ref: '#/definitions/user.UserPatchOperation'
+        type: array
+    type: object
+  user.Value:
+    properties:
+      value:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -752,6 +775,44 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/entity.User'
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      tags:
+      - User
+    patch:
+      consumes:
+      - application/json
+      description: Patch user.
+      parameters:
+      - description: Organization ID
+        in: path
+        name: org_id
+        required: true
+        type: string
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/user.UserPatchRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/entity.User'
+        "400":
+          description: Bad Request
+        "403":
+          description: Forbidden
         "404":
           description: Not Found
         "500":
